# min_dep_rust

./: .gitignore  Cargo.toml  start.sh
src/: main.rs
