[package]
name = "min_dep_rust"
version = "0.1.0"
authors = ["GeorgeAverkin <nrg3125@gmail.com>"]
license = "MIT"

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
